--- a/lab1/SimUDuckFunctionalStyle/SimUDuck/SimUDuck/SimUDuck.csproj
+++ b/lab1/SimUDuckFunctionalStyle/SimUDuck/SimUDuck/SimUDuck.csproj
@@ -43,8 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Action\DanceBehavior.cs" />
-    <Compile Include="Action\FlyBehavior.cs" />
+    <Compile Include="Behavior\DanceBehavior.cs" />
+    <Compile Include="Behavior\FlyBehavior.cs" />
     <Compile Include="Model\DecoyDuck.cs" />
     <Compile Include="Model\Duck.cs" />
     <Compile Include="Model\MallardDuck.cs" />
@@ -53,7 +53,7 @@
     <Compile Include="Model\RubberDuck.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Action\QuackBehavior.cs" />
+    <Compile Include="Behavior\QuackBehavior.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
