--- a/lab2/WeatherStationDuo/WeatherStation/WeatherStationDue.csproj
+++ b/lab2/WeatherStationDuo/WeatherStation/WeatherStationDue.csproj
@@ -43,16 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Observer\CObservable.cs" />
+    <Compile Include="Observer\Observable.cs" />
     <Compile Include="Observer\IObservable.cs" />
     <Compile Include="Observer\IObserver.cs" />
+    <Compile Include="Observer\LocationKind.cs" />
+    <Compile Include="Observer\Observer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WeatherData\CDisplay.cs" />
-    <Compile Include="WeatherData\CStatsDisplay.cs" />
-    <Compile Include="WeatherData\CWeatherData.cs" />
-    <Compile Include="WeatherData\StatisticEssence.cs" />
-    <Compile Include="WeatherData\SweatherInfo.cs" />
+    <Compile Include="WeatherData\Display.cs" />
+    <Compile Include="WeatherData\StatsDisplay.cs" />
+    <Compile Include="WeatherData\WeatherData.cs" />
+    <Compile Include="WeatherData\StatisticInfo.cs" />
+    <Compile Include="WeatherData\WeatherInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
