--- a/lab2/WeatherStationProDuo/WeatherStation/WeatherStationProDue.csproj
+++ b/lab2/WeatherStationProDuo/WeatherStation/WeatherStationProDue.csproj
@@ -47,15 +47,18 @@
     <Compile Include="Observer\IObservable.cs" />
     <Compile Include="Observer\IObserver.cs" />
     <Compile Include="Observer\LocationKind.cs" />
-    <Compile Include="Observer\Observer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WeatherData\Display.cs" />
+    <Compile Include="WeatherData\IStatisticHandler.cs" />
+    <Compile Include="WeatherData\IWindStatisticHandler.cs" />
+    <Compile Include="WeatherData\StatisticInfo.cs" />
     <Compile Include="WeatherData\StatsDisplay.cs" />
     <Compile Include="WeatherData\WeatherDataInside.cs" />
-    <Compile Include="WeatherData\StatisticInfo.cs" />
+    <Compile Include="WeatherData\StatisticHandler.cs" />
     <Compile Include="WeatherData\WeatherDataOutside.cs" />
     <Compile Include="WeatherData\WeatherInfo.cs" />
+    <Compile Include="WeatherData\WindStatisticHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
