--- a/lab5/Redactor/RedactorUnitTest/RedactorUnitTest.csproj
+++ b/lab5/Redactor/RedactorUnitTest/RedactorUnitTest.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="CommandsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtilTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
