--- a/lab7/Composite/Composite/Composite.csproj
+++ b/lab7/Composite/Composite/Composite.csproj
@@ -12,6 +12,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,6 +35,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SkiaSharp, Version=1.68.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <HintPath>..\packages\SkiaSharp.1.68.0\lib\net45\SkiaSharp.dll</HintPath>
+    </Reference>
+    <Reference Include="SkiaSharp.Views.Desktop, Version=1.68.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <HintPath>..\packages\SkiaSharp.Views.1.68.0\lib\net45\SkiaSharp.Views.Desktop.dll</HintPath>
+    </Reference>
+    <Reference Include="SkiaSharp.Views.Gtk, Version=1.68.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <HintPath>..\packages\SkiaSharp.Views.1.68.0\lib\net45\SkiaSharp.Views.Gtk.dll</HintPath>
+    </Reference>
+    <Reference Include="SkiaSharp.Views.WPF, Version=1.68.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
+      <HintPath>..\packages\SkiaSharp.Views.1.68.0\lib\net45\SkiaSharp.Views.WPF.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -46,15 +60,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Canvas\Canvas.cs" />
+    <Compile Include="Canvas\Line.cs" />
     <Compile Include="Canvas\ICanvas.cs" />
+    <Compile Include="Canvas\Point.cs" />
     <Compile Include="Drawable\Elipse.cs" />
+    <Compile Include="Drawable\Style\IOutLineStyle.cs" />
     <Compile Include="Drawable\ISlide.cs" />
+    <Compile Include="Drawable\Style\OutLineStyle.cs" />
     <Compile Include="Drawable\Rectangle.cs" />
-    <Compile Include="Groups\IInheritor.cs" />
-    <Compile Include="Groups\INode.cs" />
+    <Compile Include="Drawable\Style\GroupStyle.cs" />
+    <Compile Include="Drawable\Style\OutLineGroupStyle.cs" />
     <Compile Include="Groups\Shapes.cs" />
     <Compile Include="Drawable\Slide.cs" />
-    <Compile Include="Drawable\Style.cs" />
+    <Compile Include="Drawable\Style\Style.cs" />
     <Compile Include="Drawable\Triangle.cs" />
     <Compile Include="Groups\GroupShape.cs" />
     <Compile Include="Groups\IShapes.cs" />
@@ -63,13 +81,21 @@
     <Compile Include="Drawable\IDrawable.cs" />
     <Compile Include="Groups\IGroupShape.cs" />
     <Compile Include="Drawable\IShape.cs" />
-    <Compile Include="Drawable\IStyle.cs" />
+    <Compile Include="Drawable\Style\IStyle.cs" />
     <Compile Include="Drawable\Rect.cs" />
     <Compile Include="Drawable\Shape.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\SkiaSharp.1.68.0\build\net45\SkiaSharp.targets" Condition="Exists('..\packages\SkiaSharp.1.68.0\build\net45\SkiaSharp.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>Данный проект ссылается на пакеты NuGet, отсутствующие на этом компьютере. Используйте восстановление пакетов NuGet, чтобы скачать их.  Дополнительную информацию см. по адресу: http://go.microsoft.com/fwlink/?LinkID=322105. Отсутствует следующий файл: {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\SkiaSharp.1.68.0\build\net45\SkiaSharp.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\SkiaSharp.1.68.0\build\net45\SkiaSharp.targets'))" />
+  </Target>
 </Project>
