--- a/lab8/GumballMachine/GumballMachineTest/GumballMachineTest.csproj
+++ b/lab8/GumballMachine/GumballMachineTest/GumballMachineTest.csproj
@@ -49,13 +49,14 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GumballMachineWithState\GumballMachineWithStateTest.cs" />
+    <Compile Include="GumballMachineWithState\GumballMachineContextTest.cs" />
+    <Compile Include="GumballMachineWithState\GumballMachineTest.cs" />
     <Compile Include="GumballMachineWithState\HasQuarterStateTest.cs" />
     <Compile Include="GumballMachineWithState\NoQuarterStateTest.cs" />
     <Compile Include="GumballMachineWithState\SoldOutStateTest.cs" />
     <Compile Include="GumballMachineWithState\SoldStateTest.cs" />
     <Compile Include="MultiGumballMachineWithState\HasQuarterStateTest.cs" />
-    <Compile Include="MultiGumballMachineWithState\MultiGumballMachineTest.cs" />
+    <Compile Include="MultiGumballMachineWithState\GumballMachineContextTest.cs" />
     <Compile Include="MultiGumballMachineWithState\NoQuarterStateTest.cs" />
     <Compile Include="MultiGumballMachineWithState\SoldOutStateTest.cs" />
     <Compile Include="MultiGumballMachineWithState\SoldStateTest.cs" />
