--- a/lab7/Composite/Composite/Composite.csproj
+++ b/lab7/Composite/Composite/Composite.csproj
@@ -59,31 +59,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Canvas\Canvas.cs" />
-    <Compile Include="Canvas\Line.cs" />
+    <Compile Include="Canvas\SkiaCanvas.cs" />
     <Compile Include="Canvas\ICanvas.cs" />
     <Compile Include="Canvas\Point.cs" />
-    <Compile Include="Drawable\Elipse.cs" />
-    <Compile Include="Drawable\Style\IOutLineStyle.cs" />
-    <Compile Include="Drawable\ISlide.cs" />
-    <Compile Include="Drawable\Style\OutLineStyle.cs" />
-    <Compile Include="Drawable\Rectangle.cs" />
-    <Compile Include="Drawable\Style\GroupStyle.cs" />
-    <Compile Include="Drawable\Style\OutLineGroupStyle.cs" />
+    <Compile Include="Shape\Elipse.cs" />
+    <Compile Include="Style\IOutLineStyle.cs" />
+    <Compile Include="Groups\ISlide.cs" />
+    <Compile Include="Style\OutLineStyle.cs" />
+    <Compile Include="Shape\Rectangle.cs" />
+    <Compile Include="Style\GroupStyle.cs" />
+    <Compile Include="Style\OutLineGroupStyle.cs" />
     <Compile Include="Groups\Shapes.cs" />
-    <Compile Include="Drawable\Slide.cs" />
-    <Compile Include="Drawable\Style\Style.cs" />
-    <Compile Include="Drawable\Triangle.cs" />
+    <Compile Include="Groups\Slide.cs" />
+    <Compile Include="Style\Style.cs" />
+    <Compile Include="Shape\Triangle.cs" />
     <Compile Include="Groups\GroupShape.cs" />
     <Compile Include="Groups\IShapes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Drawable\IDrawable.cs" />
+    <Compile Include="Shape\IDrawable.cs" />
     <Compile Include="Groups\IGroupShape.cs" />
-    <Compile Include="Drawable\IShape.cs" />
-    <Compile Include="Drawable\Style\IStyle.cs" />
-    <Compile Include="Drawable\Rect.cs" />
-    <Compile Include="Drawable\Shape.cs" />
+    <Compile Include="Shape\IShape.cs" />
+    <Compile Include="Style\IStyle.cs" />
+    <Compile Include="Shape\Rect.cs" />
+    <Compile Include="Shape\Shape.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
